[gd_scene load_steps=5 format=3 uid="uid://crghgtuhh56fe"]

[ext_resource type="Script" path="res://Framework/Scripts/User Interface/PauseMenu.gd" id="1_0nbh7"]
[ext_resource type="FontFile" uid="uid://ckv4g6uel7i3t" path="res://Demo Game/Fonts/Quicksand-VariableFont_wght.ttf" id="2_a3kq2"]
[ext_resource type="PackedScene" uid="uid://cls1e4ywuc8sl" path="res://Framework/Scenes/User Interface/OptionsMenu.tscn" id="3_wtyo0"]

[sub_resource type="LabelSettings" id="LabelSettings_kl5s2"]
font = ExtResource("2_a3kq2")
font_size = 30

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nbh7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.0
offset_right = -309.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LblTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSE_GAME"
label_settings = SubResource("LabelSettings_kl5s2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnContinue" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CONTINUE_GAME"

[node name="BtnOptions" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "GAME_OPTIONS"

[node name="BtnMainMenu" type="Button" parent="Panel/VBoxContainer"]
process_mode = 2
layout_mode = 2
text = "EXIT_MAIN_MENU"

[node name="OptionsMenu" parent="Panel" instance=ExtResource("3_wtyo0")]
visible = false
layout_mode = 1
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Panel/VBoxContainer/BtnContinue" to="." method="_on_btn_continue_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/BtnOptions" to="." method="_on_btn_options_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/BtnMainMenu" to="." method="_on_btn_main_menu_button_down"]
